fix(layout): fix layout shifting and finalize the project

--- a/registrationForm/styles/fields/dropArea.css
+++ b/registrationForm/styles/fields/dropArea.css
@@ -1,6 +1,7 @@
 .dropFile {
-    border: 1px dashed var(--stroke-default);
+    outline: 1px dashed var(--stroke-default);
     border-radius: .25rem;
+    border: 2px dashed transparent;
 
     display: grid;
     justify-items: center;
@@ -24,7 +25,7 @@
     }
 
     &:hover, &:has(input:focus) {
-        border-width: 2px;
+        outline-width: 0;
         border-color: var(--stroke-highlight);
         background-color: var(--surface-secondary);
 
